OO-3948,OO-3949: render the responses in stats with the QTI 2.1 renderer